# gbln-ffi

./: BUILD_RESULTS.md  Cargo.toml  Cross.toml  README.md  build-all-platforms.sh  build-all.sh  build-docker.sh  build.rs  cbindgen.toml  test_string  test_string.c
include/: gbln.h
libs/macos-arm64/: libgbln.dylib
src/: accessors.rs  config.rs  error.rs  extensions.rs  io.rs  lib.rs  types.rs
tests/: debug2  debug2.c  debug3  debug3.c  debug4  debug4.c  debug5  debug5.c  debug6  debug6.c  debug7  debug7.c  debug_test  debug_test.c  ffi_test  ffi_test.c  test_004a_features  test_004a_features.c  test_extensions  test_extensions.c  test_optional  test_optional.c
